# boilerplate-thread-messaging

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
include/: ApplicationWorker.hpp  Daemon.hpp  WorkerBase.hpp
include/cppsl/container/: listSafe.hpp
include/cppsl/log/details/: fallback_sink.hpp
include/cppsl/threading/: scopedThread.hpp
include/messaging/: Message.hpp  Receiver.hpp  Sender.hpp
include/threading/: JThread.hpp  ThreadSafeQueue.hpp
src/: CMakeLists.txt
src/include/: Daemon.hpp  DaemonConfig.hpp  DataTypes.hpp  GooseContext.hpp  GooseWorker.hpp  PipeEventWorker.hpp  Quality.hpp  ReadXmlConfig.hpp  ShmProcImageWorker.hpp  WorkerBase.hpp  daemon.hpp  daemonConfig.hpp  dataTypes.hpp  memoryUtils.hpp  taskBase.hpp  testThreads.hpp  threadManager.hpp  workerBase.hpp
src/include/cppsl/log/details/: rsyslog_sink.hpp
src/include/cppsl/threading/: scopedFwdThread.hpp  taskManager.hpp
src/include/messaging/: MessageQueue.hpp  messageBase.hpp  messageQueue.hpp  messageReceiver.hpp  messageSender.hpp
src/include/threading/: SpscRingBuffer.hpp  spScRingBuffer.hpp  threadSafeQueue.hpp
src/include/time/: StopTimer.hpp  TimeUtilities.hpp  stopTimer.hpp
src/src/: ApplicationWorker.cpp  Daemon.cpp  GooseContext.cpp  GooseWorker.cpp  PipeEventWorker.cpp  ReadXmlConfig.cpp  ShmProcImageWorker.cpp  daemon.cpp  main.cpp
src/src/time/: TimeUtilities.cpp
test/: CMakeLists.txt  task_test.cpp
